changes in pom